--- a/model_functions.ipynb
+++ b/model_functions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNwYK9qVAClCF8FG+RXbiq",
+      "authorship_tag": "ABX9TyM6YhSBj4L8Q4Nj5269z+fP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "CWscU8HjY4jp"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "azkvEMv5VkFc"
       },
@@ -147,6 +158,15 @@
         "    return np.mean([Lower_Hashin_Strikman(phi, lam), Upper_Hashin_Strikman(phi, lam)])\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "H8CKZEKPYzwU"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
