--- a/model_functions.ipynb
+++ b/model_functions.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6YhSBj4L8Q4Nj5269z+fP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,17 +28,28 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install numpy"
+      ],
+      "metadata": {
+        "id": "MWrkiURuZzsg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import numpy as np"
       ],
       "metadata": {
         "id": "CWscU8HjY4jp"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "azkvEMv5VkFc"
       },
